[metadata]
name = fixate
author = Ryan Parry-Jones
author_email = ryanspj+github@gmail.com
description = Framework for hardware test fixtures and automated test environments
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
url = http://pyfixate.com/
version = attr: fixate.__version__



[options]
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False
python_requires = ~=3.8

install_requires =
    pyvisa
    pypubsub
    pynput
    ruamel.yaml
    pyserial
    # required for fxconfig. When ansi.Fg was added
    cmd2 >= 2.3.0
    numpy
    PyDAQmx
    # for typing.protocol
    platformdirs

[options.packages.find]
where = src


[options.extras_require]
gui =
    pyqt5
test =
    pytest
    pytest-mock
    pytest-cov
    cmd2_ext_test
    wheel
docs =
    sphinx >= 7.4, < 8

[options.entry_points]
console_scripts =
    fxconfig = fixate.core.config_util:main
